--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2349,8 +2349,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #53798D;
+  border-color: #53798D;
 }
 
 .btn-primary:hover,
@@ -2359,8 +2359,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+  background-color: #344E5B;
+  border-color: #344E5B;
 }
 
 .btn-primary:active,
@@ -5422,7 +5422,8 @@ a.thumbnail.active {
   font-size: 12px;
   line-height: 20px;
   color: #ffffff;
-  text-align: center;
+  padding-left: .5em;
+  text-align: left;
   background-color: #428bca;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
