--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5777,8 +5777,7 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 
 .panel-default > .panel-heading {
-  color: #333333;
-  background-color: #f5f5f5;
+  color: #F6F6F8;
   border-color: #dddddd;
 }
 
