--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -340,7 +340,7 @@ i {
     background-color: #E0592C;
 }
 .progress-bar-darkblue , .panel-transportation{
-    background-color: #344E5B;
+    background-color: #6566B0;
 }
 
 /* Tabs for Overview swipe */
