--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -10,7 +10,7 @@ body {
     font-family: Lora,"Lato",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #231f20;
-    /*border: 15px solid #95d551;*/
+    /*border: 15px solid #7ecc28;*/
 }
 
 html {
@@ -24,7 +24,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 35px;
+    margin: 0 0 10px;
     text-transform: uppercase;
     font-family: Montserrat,"Lato",Helvetica,Arial,sans-serif;
     font-weight: 700;
@@ -47,7 +47,17 @@ p {
 }
 
 a {
-    color: #95d551;
+    position: relative;
+    display: inline-block;
+    margin: 5px 10px;
+    outline: none;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 100;
+    font-size: 1em;
+    color: #ffffff;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -57,6 +67,7 @@ a:hover,
 a:focus {
     text-decoration: none;
     color: #11505d;
+    outline: none;
 }
 
 .light {
@@ -95,21 +106,20 @@ a:focus {
 }
 
 .navbar-custom .nav li.active {
-    outline: nonte;
-    background-color: rgba(255,255,255,.3);
+    outline: none;
 }
 
-.navbar-custom .nav li a {
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
+.navbar-custom .nav li.active a {
+    padding-bottom: 5px;
+    margin-bottom: 9px;
+    border-bottom: 1px solid #7ecc28;
 }
 
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav li a.active {
     outline: 0;
-    background-color: rgba(255,255,255,.3);
+    color: #7ecc28;
 }
 
 .navbar-toggle {
@@ -120,7 +130,6 @@ a:focus {
 .navbar-brand {
     padding: 5px;
 }
-
 
 #logo {
     height: 40px;
@@ -169,6 +178,10 @@ a:focus {
 
 .intro .intro-body .brand-heading {
     font-size: 40px;
+}
+
+.brand-heading img {
+    width: 70%;
 }
 
 .intro .intro-body .intro-text {
@@ -268,22 +281,67 @@ a:focus {
     padding-top: 100px;
 }
 
-.category-title {
-    margin-top: -30%
+/* Effect 7: second border slides up */
+.cl-effect-7 a {
+    padding: 12px 10px 10px;
+    color: #ffffff;
+    text-shadow: none;
+    font-weight: 300;
 }
 
-.category-title > a {
-    color: #fff;
+.cl-effect-7 a::before,
+.cl-effect-7 a::after {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #7ecc28;
+    content: '';
+    -webkit-transition: -webkit-transform 0.3s;
+    -moz-transition: -moz-transform 0.3s;
+    transition: transform 0.3s;
+    -webkit-transform: scale(0.85);
+    -moz-transform: scale(0.85);
+    transform: scale(0.85);
+}
+
+.cl-effect-7 a::after {
+    opacity: 0;
+    -webkit-transition: top 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+    -moz-transition: top 0.3s, opacity 0.3s, -moz-transform 0.3s;
+    transition: top 0.3s, opacity 0.3s, transform 0.3s;
+}
+
+.cl-effect-7 a:hover::before,
+.cl-effect-7 a:hover::after,
+.cl-effect-7 a:focus::before,
+.cl-effect-7 a:focus::after {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
+}
+
+.cl-effect-7 a:hover::after,
+.cl-effect-7 a:focus::after {
+    top: 0%;
+    opacity: 1;
+}
+
+.category-wrapper {
+    margin: 15px 5px;
+    border: 1px dotted #999;
 }
 
 .category-caption > p{
     vertical-align: bottom;
-    margin-top: 27%;
+    margin-top: 0;
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 40px;
-    text-align: justify;
+    margin-bottom: 15px;
+    text-align: center;
     font-size: 10pt;
+    font-weight: 50;
 }
 
 .category img {
@@ -309,7 +367,7 @@ a:focus {
 }
 .news-section h2 {
     padding-bottom: 5px;
-    border-bottom: 1px solid #95d551;
+    border-bottom: 1px solid #7ecc28;
 }
 
 .news-section h4 {
@@ -370,17 +428,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #95d551;
-    color: #95d551;
+    border: 1px solid #7ecc28;
+    color: #7ecc28;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #95d551;
+    border: 1px solid #7ecc28;
     outline: 0;
     color: #000;
-    background-color: #95d551;
+    background-color: #7ecc28;
 }
 
 ul.banner-social-buttons {
@@ -415,30 +473,30 @@ footer p {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    /*background: #fcfcfc;
+    background: rgba(255,255,255,.2);*/
 }
 
 ::selection {
     text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    /*background: #fcfcfc;
+    background: rgba(255,255,255,.2);*/
 }
 
 img::selection {
-    background: 0 0;
+    /*background: 0 0;*/
 }
 
 img::-moz-selection {
-    background: 0 0;
+    /*background: 0 0;*/
 }
 
 body {
-    webkit-tap-highlight-color: rgba(255,255,255,.2);
+    /*webkit-tap-highlight-color: rgba(255,255,255,.2);*/
 }
 
 .modal-content {
-    background-color: #95d551;
+    background-color: #7ecc28;
     border-radius: 0px;
     color: #353535;
 }
