--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -10,12 +10,26 @@ body {
     font-family: Lora,"Lato",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #231f20;
-    /*border: 15px solid #7ecc28;*/
+}
+
+header {
+    border-left: 15px solid #7ecc28;
+    border-right: 15px solid #7ecc28;
+    border-top: 15px solid #7ecc28;
+}
+
+footer {
+    background-color: #7ecc28;
 }
 
 html {
     width: 100%;
     height: 100%;
+}
+
+section {
+    border-left: 15px solid #7ecc28;
+    border-right: 15px solid #7ecc28;
 }
 
 h1,
@@ -43,6 +57,16 @@ p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
+    }
+
+    .navbar .navbar-nav {
+        display: inline-block;
+        float: none;
+        vertical-align: top;
+    }
+
+    .navbar .navbar-collapse {
+        text-align: center;
     }
 }
 
@@ -181,7 +205,7 @@ a:focus {
 }
 
 .brand-heading img {
-    width: 70%;
+    width: 50%;
 }
 
 .intro .intro-body .intro-text {
@@ -330,7 +354,9 @@ a:focus {
 
 .category-wrapper {
     margin: 15px 5px;
-    border: 1px dotted #999;
+    border-left: 1px dotted #999;
+    border-right: 1px dotted #999;
+    border-bottom: 1px dotted #999;
 }
 
 .category-caption > p{
@@ -400,7 +426,6 @@ a:focus {
 #map {
     width: 100%;
     height: 200px;
-    margin-top: 100px;
 }
 
 @media(min-width:767px) {
@@ -413,9 +438,12 @@ a:focus {
     }
 
     #map {
-        height: 400px;
-        margin-top: 250px;
+        height: 400px; 
     }
+}
+
+#map-section {
+    padding-top: 250px;
 }
 
 .btn {
