--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -38,7 +38,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 10px;
+    margin: 10px 0 10px;
     text-transform: uppercase;
     font-family: Montserrat,"Lato",Helvetica,Arial,sans-serif;
     font-weight: 700;
@@ -50,6 +50,19 @@ p {
     font-size: 18px;
     line-height: 1.5;
     font-family: Montserrat,"Lato",Helvetica,Arial,sans-serif;
+}
+
+button {
+    background-color: transparent;
+    width: 100%;
+}
+
+button:hover {
+    background-color: #7ecc28;
+}
+
+button:hover .cl-effect-7 a {
+    color: #231f20;
 }
 
 @media(min-width:767px) {
@@ -307,9 +320,11 @@ a:focus {
 }
 
 /* Effect 7: second border slides up */
+
+
+
 .cl-effect-7 a {
     padding: 12px 10px 10px;
-    color: #ffffff;
     text-shadow: none;
     font-weight: 300;
 }
@@ -321,7 +336,7 @@ a:focus {
     left: 0;
     width: 100%;
     height: 1px;
-    background: #7ecc28;
+    background: #231f20;
     content: '';
     -webkit-transition: -webkit-transform 0.3s;
     -moz-transition: -moz-transform 0.3s;
@@ -353,11 +368,11 @@ a:focus {
     opacity: 1;
 }
 
+
 .category-wrapper {
-    margin: 15px 5px;
-    border-left: 1px dotted #999;
-    border-right: 1px dotted #999;
-    border-bottom: 1px dotted #999;
+    margin: 5px -10px;
+    border: 1px solid #7ecc28;
+    height: 100px;
 }
 
 .category-caption > p{
@@ -371,8 +386,8 @@ a:focus {
     font-weight: 50;
 }
 
-.category img {
-    width: 80%;
+.category {
+    vertical-align: middle;
 }
 
 .thumbnail {
@@ -472,6 +487,10 @@ a:focus {
 
 ul.banner-social-buttons {
     margin-top: 0;
+}
+
+ul.banner-social-buttons >li > a {
+    border-radius: 0;
 }
 
 @media(max-width:1199px) {
